# opencfu_mobile

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: deploy-web.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/opencfu_mobile/: BasicCaptureWidgetProvider.kt  MainActivity.kt
android/app/src/main/res/layout/: widget_basic_capture.xml  widget_capture_expanded.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/xml/: basic_capture_widget_info.xml
assets/branding/: gen_icons.py  gen_widget_icon.py
docs/: BUILD.md  NEXT_STEPS.md  PREMIUM_FEATURES.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_mode.dart  capture_options.dart  main.dart  onboarding_screen.dart
lib/services/: local_export.dart  opencfu_engine.dart  opencfu_engine_native.dart  opencfu_engine_stub.dart  opencfu_engine_web.dart  opencfu_models.dart  web_download.dart  web_download_stub.dart  web_download_web.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/opencfu_core/: CMakeLists.txt  README.md  opencfu_mobile_core.podspec
native/opencfu_core/src/: .gitignore  config.h  opencfu_mobile_bridge.cpp  opencfu_mobile_bridge.hpp
native/opencfu_core/src/processor/headers/: ProcessingOptions.hpp  Result.hpp  Step_ColourCluster.hpp
native/opencfu_core/src/processor/src/: MaskROI.cpp  Predictor.cpp  ProcessingOptions.cpp  Processor.cpp  Result.cpp  Step_ColourCluster.cpp
native/opencfu_core/wasm/: CMakeLists.txt  README.md  wasm_bridge.cpp
test/: widget_test.dart
web/: index.html  manifest.json
web/opencfu/: opencfu_mobile.js  opencfu_mobile.wasm  opencfu_web_bridge.js
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
